--- a/content/publication/workfromhome2024/cite.bib
+++ b/content/publication/workfromhome2024/cite.bib
@@ -2,7 +2,9 @@
   title={Working from home leads to more family-oriented men},
   author={Inoue, Chihiro and Ishihata, Yusuke and Yamaguchi, Shintaro},
   journal={Review of Economics of the Household},
-  pages={},
+  volume={22},
+  number={2},
+  pages={783--829},
   year={2024},
   publisher={Springer}
 }
